--- a/soupian/index.html
+++ b/soupian/index.html
@@ -17,14 +17,22 @@
 
   gtag('config', 'G-GJZY713X5Z');
 </script>
-<script defer src="font-awesome_all.min.js"></script>
+<!-- <script defer src="font-awesome_all.min.js"></script> -->
+<script defer src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-y/font-awesome/6.0.0/js/all.min.js?v1"></script>
 </head>
 
 <body>
 <h1>搜片手机APP/PAD平板/TV客户端下载</h1>
-<h3><strong style="color:red;">安卓手机APP/平板客户端</strong> <a href="https://zuixindizhi007.github.io/soupian/app/wp-mobile-pad_v911_20250119.apk">本站下载</a> | <a href="https://soupian.one/app/wp-mobile-pad_v911_20250119.apk">备用下载地址</a></h3>
+<h3><strong style="color:red;"><i class="fa-solid fa-mobile fa-bounce" style="color:red;"></i>安卓手机APP/平板客户端</strong> <a href="https://zuixindizhi007.github.io/soupian/app/wp-mobile-pad_v911_20250119.apk">本站下载<i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a> | <a href="https://soupian.one/app/wp-mobile-pad_v911_20250119.apk">备用下载地址<i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a></h3>
 
-<h3><strong style="color:red;">安卓电视TV客户端</strong> <a href="https://zuixindizhi007.github.io/soupian/app/sp-tv_v901_20250119.apk">本站下载</a> | <a href="https://soupian.one/app/sp-tv_v901_20250119.apk">备用下载地址</a></h3>
+<h3><strong style="color:red;"><i class="fa-solid fa-tv fa-bounce" style="color:red;"></i>安卓电视TV客户端</strong> <a href="https://zuixindizhi007.github.io/soupian/app/sp-tv_v901_20250119.apk">本站下载<i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a> | <a href="https://soupian.one/app/sp-tv_v901_20250119.apk">备用下载地址<i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a></h3>
+
+<h3>
+  <a target="_blank" href="https://t.me/Movie_Ranking"><i class="fa-brands fa-telegram fa-bounce" style="color: #298edb;"></i><b>Telegram资源分享群</b></a> 
+  <a target="_blank" href="https://discord.gg/9MkKdHZDW4"><i class="fa-brands fa-discord fa-bounce" style="color: #298edb;"></i><b>Discord群</b></a>
+</h3>
+
+
 
 <hr>
 <h1>搜片.com 最新地址</h1>
@@ -37,10 +45,10 @@ Ctrl+D 收藏本页面到浏览器，永不迷路，永不被封！
 <h4><a target="_blank" href="https://soupian.icu">https://soupian.icu</a> <span speed="https://soupian.icu">测速中</span></h4>
 
 <hr>
-<i class="fa-brands fa-telegram fa-bounce" style="color: #298edb;"></i> <b>Telegram资源分享群</b> <a target="_blank" href="https://t.me/Movie_Ranking">https://t.me/Movie_Ranking</a><br>
-<i class="fa-brands fa-discord fa-bounce" style="color: #298edb;"></i> <b>Discord群</b> <a target="_blank" href="https://discord.gg/9MkKdHZDW4">https://discord.gg/9MkKdHZDW4</a><br>
-<i class="fa-brands fa-telegram fa-bounce" style="color: #298edb;"></i> <b>联系站长Telegram</b> <a target="_blank" href="https://t.me/SouPian_BOT">https://t.me/SouPian_BOT</a><br>
-
+<h3>
+  <a target="_blank" href="https://t.me/Movie_Ranking"><i class="fa-brands fa-telegram fa-bounce" style="color: #298edb;"></i><b>Telegram资源分享群</b></a> 
+  <a target="_blank" href="https://discord.gg/9MkKdHZDW4"><i class="fa-brands fa-discord fa-bounce" style="color: #298edb;"></i><b>Discord群</b></a>
+</h3>
 
 <script>
   var ping = 1;
