--- a/waipian/index.html
+++ b/waipian/index.html
@@ -14,7 +14,8 @@
 
   gtag('config', 'G-QJ75MZ5NY9');
 </script>
-<script defer src="font-awesome_all.min.js"></script>
+<!-- <script defer src="font-awesome_all.min.js"></script> -->
+<script defer src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-y/font-awesome/6.0.0/js/all.min.js?v1"></script>
 </head>
 <body>
 <h1>歪片星球最新地址</h1>
@@ -23,14 +24,29 @@
 
 <hr />
 <a href="#app" id="app"><img src="wpxq-app.png" title="歪片星球APP"></a>
-<h3>歪片星球APP下载地址：<a target="_blank" href="https://waipian.app/?WaiPian.app">https://WaiPian.app</a></h3> 
+<h1>歪片星球APP/安卓电视客户端下载地址⏬ <a target="_blank" href="https://waipian.app/?WaiPian.app">https://WaiPian.app</a></h1> 
 <p>下载提示：苹果APP客户端暂未开放下载，请收藏 <a target="_blank" href="https://xn--kivs1jvyg1yb.com/">歪片星球.com</a> 域名到浏览器，或添加至桌面图标。</p>
 <!-- <p><a target="_blank" href="https://at.umtrack.com/zqW1fi?cid=483"><img src="apk-qrcode.png?1129"/></a></p> -->
 <!-- <p>安卓手机扫码下载</p> -->
-<p>安卓手机/PAD平板APK【<a target="_blank" href="app/wp-mobile-pad_v911_20250119.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://waipian.tv/app/wp-mobile-pad_v911_20250119.apk">源站下载⏬</a>】</p>
-<p>电视TV客户端【<a target="_blank" href="app/wp-tv_v911_20250119.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://waipian.tv/app/wp-tv_v911_20250119.apk">源站下载⏬</a>】</p>
-<!-- <p>【<a target="_blank" href="https://at.umtrack.com/jaiSzC?cid=483">下载安卓APK(国内线路)⏬</a>】</p>
+
+<p><strong style="color:red;"><i class="fa-solid fa-mobile fa-bounce" style="color:red;"></i>安卓手机/PAD平板APK</strong>
+  【<a target="_blank" href="app/wp-mobile-pad_v911_20250119.apk"><b>本站下载</b><i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a>】 | 
+  【<a target="_blank" href="https://waipian.tv/app/wp-mobile-pad_v911_20250119.apk"><b>源站下载</b><i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a>】
+</p>
+
+<p><strong style="color:red;"><i class="fa-solid fa-tv fa-bounce" style="color:red;"></i>电视TV客户端</strong>
+  【<a target="_blank" href="app/wp-tv_v911_20250119.apk"><b>本站下载</b><i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a>】 | 
+  【<a target="_blank" href="https://waipian.tv/app/wp-tv_v911_20250119.apk"><b>源站下载</b><i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a>】
+</p>
+<!-- <p>【<a target="_blank" href="https://at.umtrack.com/jaiSzC?cid=483">下载安卓APK(国内线路)<i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a>】</p>
 <p>【<a target="_blank" href="https://at.umtrack.com/5HTrWv?cid=483">下载安卓APK(海外线路)⏬</a>】</p> -->
+
+<h3>
+  <a href="https://t.me/Movie_Ranking"><strong style="color:blue;"><i class="fa-brands fa-telegram fa-bounce" style="color: blue;"></i>Telegram资源分享群</strong></a>
+  <a href="https://discord.gg/9MkKdHZDW4"><strong style="color:blue;"><i class="fa-brands fa-discord fa-bounce" style="color: blue;"></i>Discord群</strong></a>
+  <a href="https://t.me/WaiPianBOT"><strong style="color:blue;"><i class="fa-brands fa-telegram fa-bounce" style="color: blue;"></i>商务合作</strong></a>
+</h3>
+
 <ul><li><b>防封</b>：如果域名被封无法访问，可通过App打开、查看最新网址；</li><li><b>最新</b>：最新热门VIP在线看与下载资源同步更新；</li><li><b>多源</b>：持续添加优质线路、视频源供您切换，画质清晰、播放流畅；</li><li><b>海量</b>：聚合全网资源，想看啥就看啥</li><li><b>下载</b>：聚合全网下载，持续完善资源库</li></ul>
 
 <hr />
