--- a/zhiyin/index.html
+++ b/zhiyin/index.html
@@ -20,7 +20,8 @@
 
   gtag('config', 'G-GH7EN7VYX7');
 </script>
-    
+
+<script defer src="font-awesome_all.min.js"></script>
 </head>
 
 <body style="text-align:center">
@@ -53,15 +54,32 @@
 
         <div class=" has-text-weight-bold">
         <div style="display: flex; flex-wrap: wrap;" class="box p-0">
-            <a target="_blank" href="/xv/d/xv-mobile-pad_v301_20250119.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
+            <a target="_blank" href="/xv/d/xv-mobile-pad_v301_20250119.apk" style="flex: 50%; font-size: 20px;padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
                 <div>
-                <u><b>手机APP/PAD平板下载⬇️</b></u>
+                <p><u><b><i class="fa-solid fa-mobile fa-bounce" style="color: #ffffffb8;"></i>安卓手机APP/PAD平板下载<i class="fa-solid fa-download fa-bounce" style="color: #fffaaa;"></i></b></u> 免费/无需注册/无需翻墙即可观看</p>
+                </div>
+            </a>
+            <a target="_blank" href="/xv/d/xv-tv_v301_20250119.apk" style="flex: 50%; font-size: 20px;padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
+                <div>
+                <p><u><b><i class="fa-solid fa-tv fa-bounce" style="color: #ffffffb8;"></i>电视TV客户端下载<i class="fa-solid fa-download fa-bounce" style="color: #fffaaa;"></i></b></u> 免费/免注册登陆/不用翻墙/无广告</p>
                 </div>
             </a>
 
-            <a target="_blank" href="/xv/d/xv-tv_v301_20250119.apk" style="flex: 50%; padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
+            <a target="_blank" href="https://t.me/Movie_Ranking" style="flex: 33%; padding: 10px; font-size: 20px;box-sizing: border-box;background-color: #7474b2;color: black;" class="has-text-warning-light">
                 <div>
-                <u><b>电视TV客户端下载⬇️</b></u>
+                <i class="fa-brands fa-telegram fa-bounce" style="color: #ffffff;"></i><u><b>Telegram资源共享群</b></u>
+                </div>
+            </a>
+
+            <a target="_blank" href="https://discord.gg/JeGWmpajYZ" style="flex: 33%; padding: 10px; font-size: 20px;box-sizing: border-box;background-color: #7474b2;color: black;" class="has-background-link-dark has-text-warning-lighthas-text-danger has-background-warning">
+                <div>
+                <i class="fa-brands fa-discord fa-bounce" ></i><u><b>Discord群</b></u>
+                </div>
+            </a>
+
+            <a target="_blank" href="https://t.me/xvDiZhiBOT" style="flex: 33%;padding: 10px;font-size: 20px;box-sizing: border-box;background-color: #7474b2;color: white;" class="has-background-secondary has-text-warning-light">
+                <div>
+                <i class="fa-brands fa-telegram fa-bounce" style="color: #ffffff;"></i><u><b>联系站长合作</b></u>
                 </div>
             </a>
         </div>
@@ -88,14 +106,32 @@
         <font color="gray">域名列表更新时间：2024年7月12日</font><br>
         
         <div style="display: flex; flex-wrap: wrap;" class="box p-0">
+            <a target="_blank" href="https://t.me/Movie_Ranking" style="flex: 33%; padding: 10px; font-size: 30px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
+                <div>
+                <i class="fa-brands fa-telegram fa-bounce" style="color: #ffffff;"></i><u><b>Telegram资源共享群</b></u>
+                </div>
+            </a>
+
+            <a target="_blank" href="https://discord.gg/JeGWmpajYZ" style="flex: 33%; padding: 10px; font-size: 30px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-lighthas-text-danger has-background-warning">
+                <div>
+                <i class="fa-brands fa-discord fa-bounce" ></i><u><b>Discord群</b></u>
+                </div>
+            </a>
+
+            <a target="_blank" href="https://t.me/ZhiYinBOT" style="flex: 33%; padding: 10px; font-size: 30px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
+                <div>
+                <i class="fa-brands fa-telegram fa-bounce" style="color: #ffffff;"></i><u><b>联系站长合作</b></u>
+                </div>
+            </a>
+
             <a target="_blank" href="/xv/d/xv-mobile-pad_v301_20250119.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
                 <div>
-                <p><u><b>安卓手机APP/PAD平板下载📱⬇️</b></u> 永久免费/无需注册登陆/无需翻墙即可观看</p>
+                <p><u><b><i class="fa-solid fa-mobile fa-bounce" style="color: #ffffffb8;"></i>安卓手机APP/PAD平板下载<i class="fa-solid fa-download fa-bounce" style="color: #fffaaa;"></i></b></u> 永久免费/免注册/无需翻墙/无广告</p>
                 </div>
             </a>
             <a target="_blank" href="/xv/d/xv-tv_v301_20250119.apk" style="flex: 50%; padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
                 <div>
-                <p><u><b>电视TV客户端下载🖥️⬇️</b></u> 永久免费/无需注册登陆/无需翻墙即可观看/无广告</p>
+                <p><u><b><i class="fa-solid fa-tv fa-bounce" style="color: #ffffffb8;"></i>电视TV客户端下载<i class="fa-solid fa-download fa-bounce" style="color: #fffaaa;"></i></b></u> 永久免费/免注册/无需翻墙/无广告</p>
                 </div>
             </a>
         </div>
@@ -172,18 +208,305 @@
 <p>主站 (国内访问无法访问) → <a target="_blank" href="http://app.CAVhot.com">http://app.CAVhot.com</a></p>
 <hr />
 
-<script type="text/javascript">document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1279874531'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1279874531' type='text/javascript'%3E%3C/script%3E"));</script>
+
 <br><br><br><br>
 
-<a href="https://t.me/ZhiYinBOT" target="_blank" style="z-index: 9999;" aria-label="合作Telegram">
-  <button class="telegram-btn">合作Telegram</button>
-  <style>.telegram-btn {position: fixed;bottom: 0rem;left: 0rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.telegram-btn svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.telegram-btn:hover svg{animation:telegram-wave 560ms ease-in-out;}@keyframes telegram-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.telegram-btn:hover svg{animation:none}.telegram-btn svg{animation:telegram-wave 560ms ease-in-out}}</style>
-</a>
+<a href="d/xv-mobile-pad_v301_20250119.apk" target="_blank" style="z-index: 9999;" aria-label="XVideoS中文版">
+            <button class="download-app">安卓APK<i class="fa-solid fa-mobile fa-bounce" style="color: #ffffffb8;"></i>下载</button>
+            <style>
+            .download-app {
+                position: fixed;
+                bottom: 0rem;
+                left: 0%;
+                background-color: #b9ee1b;
+                padding: .8rem;
+                height: auto;
+                color: white;
+                text-align: right;
+                vertical-align: middle;
+                border: none;
+                font-size: 1rem;
+                border-radius: 4px;
+            }
 
-<a href="https://discord.gg/wH7hPaVysj" target="_blank" style="z-index: 9999;" aria-label="Discord群">
-  <button class="discord-btn">Discord群</button>
-  <style>.discord-btn {position: fixed;bottom: 0rem;right: 0rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.discord-btn svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.discord-btn:hover svg{animation:discord-wave 560ms ease-in-out;}@keyframes discord-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.discord-btn:hover svg{animation:none}.discord-btn svg{animation:discord-wave 560ms ease-in-out}}</style>
-</a>
+            .download-app svg {
+                height: 1.5rem;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+            }
 
+            .download-app:hover svg {
+                animation: telegram-wave 560ms ease-in-out;
+            }
+
+            @keyframes telegram-wave {
+
+                0%,
+                100% {
+                    transform: translateY(-50%) rotate(0)
+                }
+
+                20%,
+                60% {
+                    transform: translateY(-50%) rotate(-25deg)
+                }
+
+                40%,
+                80% {
+                    transform: translateY(-50%) rotate(10deg)
+                }
+            }
+
+            @media (max-width:500px) {
+                .download-app:hover svg {
+                    animation: none
+                }
+
+                .download-app svg {
+                    animation: telegram-wave 560ms ease-in-out
+                }
+            }
+            </style>
+        </a>
+
+        <a href="d/xv-tv_v301_20250119.apk" target="_blank" style="z-index: 9999;" aria-label="XVideoS中文版">
+            <button class="download-tv">TV电视端(国内无需翻墙)<i class="fa-solid fa-tv fa-bounce" style="color: #ffffffb8;"></i>下载</button>
+            <style>
+            .download-tv {
+                position: fixed;
+                bottom: 0rem;
+                left: 27%;
+                background-color: #b9ee1b;
+                padding: .8rem;
+                height: auto;
+                color: white;
+                text-align: right;
+                vertical-align: middle;
+                border: none;
+                font-size: 1rem;
+                border-radius: 4px;
+            }
+
+            .download-tv svg {
+                height: 1.5rem;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+            }
+
+            .download-tv:hover svg {
+                animation: telegram-wave 560ms ease-in-out;
+            }
+
+            @keyframes telegram-wave {
+
+                0%,
+                100% {
+                    transform: translateY(-50%) rotate(0)
+                }
+
+                20%,
+                60% {
+                    transform: translateY(-50%) rotate(-25deg)
+                }
+
+                40%,
+                80% {
+                    transform: translateY(-50%) rotate(10deg)
+                }
+            }
+
+            @media (max-width:500px) {
+                .download-tv:hover svg {
+                    animation: none
+                }
+
+                .download-tv svg {
+                    animation: telegram-wave 560ms ease-in-out
+                }
+            }
+            </style>
+        </a>
+
+        <a href="https://t.me/Movie_Ranking" target="_blank" style="z-index: 9999;" aria-label="合作">
+            <button class="telegram-btn"><i class="fa-brands fa-telegram fa-bounce" style="color: #74C0FC80; display: flex; align-items: center; justify-content: center; height: 50%;"></i> Telegram资源分享群</button>
+            <style>
+            .telegram-btn {
+                position: fixed;
+                bottom: 6rem;
+                right: 0rem;
+                background-color: #1b5eee;
+                padding: .8rem;
+                height: auto;
+                color: white;
+                text-align: right;
+                vertical-align: middle;
+                border: none;
+                font-size: 1rem;
+                border-radius: 4px;
+            }
+
+            .telegram-btn svg {
+                height: 1.5rem;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+            }
+
+            .telegram-btn:hover svg {
+                animation: telegram-wave 560ms ease-in-out;
+            }
+
+            @keyframes telegram-wave {
+
+                0%,
+                100% {
+                    transform: translateY(-50%) rotate(0)
+                }
+
+                20%,
+                60% {
+                    transform: translateY(-50%) rotate(-25deg)
+                }
+
+                40%,
+                80% {
+                    transform: translateY(-50%) rotate(10deg)
+                }
+            }
+
+            @media (max-width:500px) {
+                .telegram-btn:hover svg {
+                    animation: none
+                }
+
+                .telegram-btn svg {
+                    animation: telegram-wave 560ms ease-in-out
+                }
+            }
+            </style>
+        </a>
+        <a href="https://t.me/ZhiYinBOT" target="_blank" style="z-index: 9999;" aria-label="合作">
+            <button class="telegram-btn2"><i class="fa-brands fa-telegram fa-bounce" style="color: #74C0FC80; display: flex; align-items: center; justify-content: center; height: 70%;"></i> 联系站长</button>
+            <style>
+            .telegram-btn2 {
+                position: fixed;
+                bottom: 3rem;
+                right: 0rem;
+                background-color: #1b5eee;
+                padding: .8rem;
+                height: auto;
+                color: white;
+                text-align: right;
+                vertical-align: middle;
+                border: none;
+                font-size: 1rem;
+                border-radius: 4px;
+            }
+
+            .telegram-btn2 svg {
+                height: 1.5rem;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+            }
+
+            .telegram-btn2:hover svg {
+                animation: telegram-wave 560ms ease-in-out;
+            }
+
+            @keyframes telegram-wave {
+
+                0%,
+                100% {
+                    transform: translateY(-50%) rotate(0)
+                }
+
+                20%,
+                60% {
+                    transform: translateY(-50%) rotate(-25deg)
+                }
+
+                40%,
+                80% {
+                    transform: translateY(-50%) rotate(10deg)
+                }
+            }
+
+            @media (max-width:500px) {
+                .telegram-btn2:hover svg {
+                    animation: none
+                }
+
+                .telegram-btn2 svg {
+                    animation: telegram-wave 560ms ease-in-out
+                }
+            }
+            </style>
+        </a>
+        <a href="https://discord.gg/JeGWmpajYZ" target="_blank" style="z-index: 9999;" aria-label="Discord群">
+            <button class="discord-btn"><i class="fa-brands fa-discord fa-beat-fade" style="color: #74C0FCb8; display: flex; align-items: center; justify-content: center; height: 50%;"></i> Discord群</button>
+            <style>
+            .discord-btn {
+                position: fixed;
+                bottom: 0rem;
+                right: 0rem;
+                background-color: #7b84e1;
+                padding: .8rem;
+                height: auto;
+                color: white;
+                text-align: right;
+                vertical-align: middle;
+                border: none;
+                font-size: 1rem;
+                border-radius: 4px;
+            }
+
+            .discord-btn svg {
+                height: 1.5rem;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+            }
+
+            .discord-btn:hover svg {
+                animation: discord-wave 560ms ease-in-out;
+            }
+
+            @keyframes discord-wave {
+
+                0%,
+                100% {
+                    transform: translateY(-50%) rotate(0)
+                }
+
+                20%,
+                60% {
+                    transform: translateY(-50%) rotate(-25deg)
+                }
+
+                40%,
+                80% {
+                    transform: translateY(-50%) rotate(10deg)
+                }
+            }
+
+            @media (max-width:500px) {
+                .discord-btn:hover svg {
+                    animation: none
+                }
+
+                .discord-btn svg {
+                    animation: discord-wave 560ms ease-in-out
+                }
+            }
+            </style>
+        </a>
 </body>
 </html>
