--- a/dyxs/index.html
+++ b/dyxs/index.html
@@ -14,7 +14,8 @@
 
   gtag('config', 'G-WD61439VDR');
 </script>
-<script defer src="font-awesome_all.min.js"></script>
+<!-- <script defer src="font-awesome_all.min.js"></script> -->
+<script defer src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-y/font-awesome/6.0.0/js/all.min.js?v1"></script>
 </head>
 <body>
 <h1>Ctrl+D 收藏本页面到浏览器，永不迷路，永不被封！</h1>
@@ -22,12 +23,26 @@
 <b>电影先生</b>聚合全网影片，你想看的全都有！电影先生每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看。
 
 <hr />
-<h1>安卓APP下载⏬</h1>
+<h1>安卓APP/电视TV客户端下载⏬</h1>
 <p>下载提示：苹果APP客户端暂未开放下载，请收藏 电影先生 http://dyxs.me http://dyxs.de 域名到浏览器，或添加至桌面图标。</p>
 <!-- <p><a target="_blank" href="https://at.umtrack.com/zqW1fi?cid=483"><img src="apk-qrcode.png"/></a></p>
 <p>安卓手机扫码下载</p> -->
-<p>安卓手机/PAD平板APK【<a target="_blank" href="app/dyxs-mobile-pad_v701_20250119.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://www.dianyingim.com/app/dyxs-mobile-pad_v701_20250119.apk">源站下载⏬</a>】</p>
-<p>电视TV客户端【<a target="_blank" href="app/dyxs-tv_v701_20250119.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://www.dianyingim.com/app/dyxs-tv_v701_20250119.apk">源站下载⏬</a>】</p>
+<p><strong style="color:red;"><i class="fa-solid fa-mobile fa-bounce" style="color:red;"></i>安卓手机/PAD平板APK</strong>
+  【<a target="_blank" href="app/dyxs-mobile-pad_v701_20250119.apk"><b>本站下载</b><i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a>】 | 
+  【<a target="_blank" href="https://www.dianyingim.com/app/dyxs-mobile-pad_v701_20250119.apk"><b>源站下载</b><i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a>】
+</p>
+
+<p><strong style="color:red;"><i class="fa-solid fa-tv fa-bounce" style="color:red;"></i>电视TV客户端</strong>
+  【<a target="_blank" href="app/dyxs-tv_v701_20250119.apk"><b>本站下载</b><i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a>】 | 
+  【<a target="_blank" href="https://www.dianyingim.com/app/dyxs-tv_v701_20250119.apk"><b>源站下载</b><i class="fa-solid fa-download fa-bounce" style="color: #683cec;"></i></a>】
+</p>
+
+<h3>
+  <a href="https://t.me/Movie_Ranking"><strong style="color:blue;"><i class="fa-brands fa-telegram fa-bounce" style="color: blue;"></i>Telegram资源分享群</strong></a>
+  <a href="https://discord.gg/9MkKdHZDW4"><strong style="color:blue;"><i class="fa-brands fa-discord fa-bounce" style="color: blue;"></i>Discord群</strong></a>
+  <a href="https://t.me/DianYingXianShengBOT"><strong style="color:blue;"><i class="fa-brands fa-telegram fa-bounce" style="color: blue;"></i>商务合作</strong></a>
+</h3>
+
 <!-- <p>【<a target="_blank" href="https://at.umtrack.com/5HTrWv?cid=483">下载安卓APK(海外节点)⏬</a>】</p> -->
 <ul>
 <li><b>防封</b>：如果域名被封无法访问，可通过App打开、查看最新网址；</li>
