--- a/xv/index.html
+++ b/xv/index.html
@@ -21,7 +21,8 @@
 
     gtag('config', 'G-3TT4E09V8S');
     </script>
-    <script defer src="font-awesome_all.min.js"></script>
+    <!-- <script defer src="font-awesome_all.min.js"></script> -->
+    <script defer src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-y/font-awesome/6.0.0/js/all.min.js?v1"></script>
 </head>
 
 <body style="text-align:center">
@@ -47,15 +48,33 @@
 
         <div class=" has-text-weight-bold">
         <div style="display: flex; flex-wrap: wrap;" class="box p-0">
-            <a target="_blank" href="d/xv-mobile-pad_v301_20250119.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
+            <a target="_blank" href="d/xv-mobile-pad_v301_20250119.apk" style="flex: 50%; padding: 10px; font-size: 30px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
                 <div>
-                <u><b>手机APP/PAD平板下载⬇️</b></u>
+                <u><b><i class="fa-solid fa-mobile fa-bounce" style="color: #ffffffb8;"></i>手机APP/PAD平板下载⬇️</b></u>
                 </div>
             </a>
 
-            <a target="_blank" href="d/xv-tv_v301_20250119.apk" style="flex: 50%; padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
+            <a target="_blank" href="d/xv-tv_v301_20250119.apk" style="flex: 50%; padding: 10px; font-size: 30px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
                 <div>
-                <u><b>电视TV客户端下载⬇️</b></u>
+                <u><b><i class="fa-solid fa-tv fa-bounce" style="color: #ffffffb8;"></i>电视TV客户端下载⬇️</b></u>
+                </div>
+            </a>
+
+            <a target="_blank" href="https://t.me/Movie_Ranking" style="flex: 33%; padding: 10px; font-size: 20px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
+                <div>
+                <i class="fa-brands fa-telegram fa-bounce" style="color: #ffffff;"></i><u><b>Telegram资源共享群</b></u>
+                </div>
+            </a>
+
+            <a target="_blank" href="https://discord.gg/JeGWmpajYZ" style="flex: 33%; padding: 10px; font-size: 20px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-lighthas-text-danger has-background-warning">
+                <div>
+                <i class="fa-brands fa-discord fa-bounce" ></i><u><b>Discord群</b></u>
+                </div>
+            </a>
+
+            <a target="_blank" href="https://t.me/xvDiZhiBOT" style="flex: 33%; padding: 10px; font-size: 20px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
+                <div>
+                <i class="fa-brands fa-telegram fa-bounce" style="color: #ffffff;"></i><u><b>联系站长合作</b></u>
                 </div>
             </a>
         </div>
@@ -83,35 +102,32 @@
         
         
         <div style="display: flex; flex-wrap: wrap;" class="box p-0">
-            <a target="_blank" href="https://t.me/Movie_Ranking" style="flex: 33%; padding: 10px; font-size: 30px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
+            <a target="_blank" href="https://t.me/Movie_Ranking" style="flex: 33%; padding: 10px; font-size: 20px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
                 <div>
                 <i class="fa-brands fa-telegram fa-bounce" style="color: #ffffff;"></i><u><b>Telegram资源共享群</b></u>
                 </div>
             </a>
 
-            <a target="_blank" href="https://discord.gg/JeGWmpajYZ" style="flex: 33%; padding: 10px; font-size: 30px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-lighthas-text-danger has-background-warning">
+            <a target="_blank" href="https://discord.gg/JeGWmpajYZ" style="flex: 33%; padding: 10px; font-size: 20px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-lighthas-text-danger has-background-warning">
                 <div>
                 <i class="fa-brands fa-discord fa-bounce" ></i><u><b>Discord群</b></u>
                 </div>
             </a>
 
-            <a target="_blank" href="https://t.me/xvDiZhiBOT" style="flex: 33%; padding: 10px; font-size: 30px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
+            <a target="_blank" href="https://t.me/xvDiZhiBOT" style="flex: 33%; padding: 10px; font-size: 20px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
                 <div>
                 <i class="fa-brands fa-telegram fa-bounce" style="color: #ffffff;"></i><u><b>联系站长合作</b></u>
                 </div>
             </a>
-        </div>
 
-
-        <div style="display: flex; flex-wrap: wrap;" class="box p-0">
             <a target="_blank" href="d/xv-mobile-pad_v301_20250119.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
                 <div>
-                <p><u><b>安卓手机APP/PAD平板下载📱⬇️</b></u> 永久免费/无需注册登陆/无需翻墙即可观看</p>
+                <p><u><b><i class="fa-solid fa-mobile fa-bounce" style="color: #ffffffb8;"></i>安卓手机APP/PAD平板下载📱⬇️</b></u> 永久免费/无需注册登陆/无需翻墙即可观看</p>
                 </div>
             </a>
             <a target="_blank" href="d/xv-tv_v301_20250119.apk" style="flex: 50%; padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
                 <div>
-                <p><u><b>电视TV客户端下载🖥️⬇️</b></u> 永久免费/无需注册登陆/无需翻墙即可观看/无广告</p>
+                <p><u><b><i class="fa-solid fa-tv fa-bounce" style="color: #ffffffb8;"></i>电视TV客户端下载🖥️⬇️</b></u> 永久免费/无需注册登陆/无需翻墙即可观看/无广告</p>
                 </div>
             </a>
         </div>
