--- a/soupian/index.html
+++ b/soupian/index.html
@@ -37,12 +37,15 @@
 <hr>
 <h1>搜片.com 最新地址</h1>
 Ctrl+D 收藏本页面到浏览器，永不迷路，永不被封！
-<h4><a target="_blank" href="https://xn--u2u682a.com/">https://搜片.com</a> <span speed="https://xn--u2u682a.com/">测速中</span></h4>
-<h4><a target="_blank" href="https://soupian.app">https://soupian.app</a> 国际站 <span speed="https://soupian.app">测速中</span></h4>
-<h4><a target="_blank" href="https://soupian.xyz">https://soupian.xyz</a> <span speed="https://soupian.xyz">测速中</span></h4>
+
+<h4><a target="_blank" href="https://soupian.plus">https://soupian.plus</a> <span speed="https://soupian.plus">测速中</span></h4>
+<h4><a target="_blank" href="https://soupian.pro">https://soupian.pro</a> <span speed="https://soupian.pro">测速中</span></h4>
 <h4><a target="_blank" href="https://soupian.one">https://soupian.one</a> <span speed="https://soupian.one">测速中</span></h4>
-<h4><a target="_blank" href="https://soupian.de">https://soupian.de</a> <span speed="https://soupian.de">测速中</span></h4>
 <h4><a target="_blank" href="https://soupian.icu">https://soupian.icu</a> <span speed="https://soupian.icu">测速中</span></h4>
+<hr>
+<h4><a target="_blank" href="https://soupian.app">https://soupian.app</a> 国际站 <span speed="https://soupian.app">测速中</span></h4>
+<h4><a target="_blank" href="https://xn--u2u682a.com/">https://搜片.com</a> <span speed="https://xn--u2u682a.com/">测速中</span></h4>
+
 
 <hr>
 <h3>
