--- a/waipian/index.html
+++ b/waipian/index.html
@@ -59,7 +59,7 @@
 
 <hr />
 <a href="#new" id="new"><img src="wpxq-new.png" title="歪片星球最新地址"></a>
-<h3>2025年9月26日最新线路：</h3>
+<h3>最新线路：</h3>
 <p>福建、福州、江苏，以及浙江 北京地区，以及所有的中国移动网络，均可能会打不开</p>
 <p><a target="_blank" href="https://WaiPian16.com/?WaiPianXingQiu.com">https://WaiPian16.com</a> <span speed="https://WaiPian16.com">测速中</span></p>
 <p><a target="_blank" href="https://WaiPian17.com/?WaiPianXingQiu.com">https://WaiPian17.com</a> <span speed="https://WaiPian17.com">测速中</span></p>
